@@ -2,7 +2,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.16 2004/11/07 22:33:45 port001 Exp $
+# $Id: ChangeLog,v 1.17 2004/11/09 17:59:24 port001 Exp $
+
+09 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Implemented a basic threading class
 
 07 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Basic access control for the admin section.
